--- a/public/manifest.json
+++ b/public/manifest.json
@@ -47,7 +47,7 @@
   "related_applications": [
     {
       "platform": "play",
-      "url": "https://play.google.com/store/apps/details?id=com.radiusconnect.app",
+      "url": "https://play.google.com/store/apps/details?id=com.radiusapp.app",
       "id": "com.radiusconnect.app"
     },
     {
